--- a/css/index.scss
+++ b/css/index.scss
@@ -26,4 +26,5 @@ body {
 
 main {
     z-index: 0;
+    overflow-x: hidden;
 }
